# libkinect2

./: .gitignore  CMakeLists.txt  README.md  kinect2Config.cmake
example/: main.cpp
include/kinect2/: Kinect2.h  Kinect2Frame.h  Kinect2Impl.h
src/kinect2/: Kinect2.cpp  Kinect2Frame.cpp  Kinect2Impl.cpp
